<resources>
    <string name="app_name">Calculator</string>
    <string name="control_font_family_headline">sans-serif-regular</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="decimal_point">.</string>
    <string name="_0">0</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="pie">π</string>
    <string name="euler">e</string>
    <string name="power">^</string>
    <string name="root">√</string>
    <string name="square">²</string>
    <string name="negative_power">⁻¹</string>
    <string name="exponent">exp</string>
    <string name="sinus">sin</string>
    <string name="cosine">cos</string>
    <string name="tangent">tan</string>
    <string name="factorial">!</string>
    <string name="logarythm">log</string>
    <string name="logn">ln</string>

    <string-array name="degrees">
        <item>DEG</item>
        <item>RAD</item>
    </string-array>
</resources>