<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/numberPad"
    style="@style/AdvancedPadLayout.Numbers"
    android:background="@color/DarkGray"
    android:columnCount="5"
    android:rowCount="4">

        <ImageButton
            android:id="@+id/btn_clr"
            style="@style/ActionButtonsStyle.Operator.Text"
            android:layout_row="0"
            android:layout_column="4"
            android:scaleType="centerInside"
            android:src="@drawable/ic_ac"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btn_del"
            style="@style/ActionButtonsStyle.Operator.Text"
            android:layout_row="1"
            android:layout_column="4"
            android:scaleType="centerInside"
            android:src="@drawable/ic_del"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btn_op_percent"
            style="@style/ActionButtonsStyle.Operator.Text"
            android:layout_row="2"
            android:layout_column="4"
            android:scaleType="centerInside"
            android:src="@drawable/ic_percent"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btn_div"
            style="@style/ActionButtonsStyle.Operator"
            android:layout_row="0"
            android:layout_column="3"
            android:scaleType="centerInside"
            android:src="@drawable/ic_div"
            android:visibility="visible" />

        <Button
            android:id="@+id/digit_7"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="addNumber"
            android:text="@string/_7" />

        <Button
            android:id="@+id/digit_8"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="addNumber"
            android:text="@string/_8" />

        <Button
            android:id="@+id/digit_9"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="addNumber"
            android:text="@string/_9" />

        <ImageButton
            android:id="@+id/btn_mul"
            style="@style/ActionButtonsStyle.Operator"
            android:layout_row="1"
            android:layout_column="3"
            android:scaleType="centerInside"
            android:src="@drawable/ic_mul"
            android:visibility="visible" />

        <Button
            android:id="@+id/digit_4"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="addNumber"
            android:text="@string/_4" />

        <Button
            android:id="@+id/digit_5"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="addNumber"
            android:text="@string/_5" />

        <Button
            android:id="@+id/digit_6"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="addNumber"
            android:text="@string/_6" />

        <ImageButton
            android:id="@+id/btn_sub"
            style="@style/ActionButtonsStyle.Operator"
            android:layout_row="2"
            android:layout_column="3"
            android:scaleType="centerInside"
            android:src="@drawable/ic_sub"
            android:visibility="visible" />

        <Button
            android:id="@+id/digit_1"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="addNumber"
            android:text="@string/_1" />

        <Button
            android:id="@+id/digit_2"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="addNumber"
            android:text="@string/_2" />

        <Button
            android:id="@+id/digit_3"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="addNumber"
            android:text="@string/_3" />

        <ImageButton
            android:id="@+id/btn_add"
            style="@style/ActionButtonsStyle.Operator"
            android:layout_row="3"
            android:layout_column="3"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add"
            android:visibility="visible" />

        <Button
            android:id="@+id/dec_point"
            style="@style/ActionButtonsStyle.Special"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/decimal_point" />

        <Button
            android:id="@+id/digit_0"
            style="@style/ActionButtonsStyle.Numbers"
            android:layout_row="3"
            android:layout_column="1"
            android:onClick="addNumber"
            android:text="@string/_0" />

        <ImageButton
            android:id="@+id/btn_paren"
            style="@style/ActionButtonsStyle.Operator.Text"
            android:layout_row="3"
            android:layout_column="2"
            android:autoSizeMaxTextSize="24dp"
            android:autoSizeMinTextSize="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_parentheses"
            android:visibility="visible" />

        <LinearLayout
            style="@style/ActionButtonsStyle.Operator"
            android:layout_row="3"
            android:layout_column="4"
            android:background="@color/AccentBackground">

            <ImageButton
                android:id="@+id/equal"
                style="@style/ActionButtonsStyle.Operator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_equal" />

        </LinearLayout>


</GridLayout>