<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <com.example.calculator.utils.AdvancedDrawer
        android:id="@+id/expandableAdvancedDrawer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/colapsedAdvanceTab"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/numberPadLayout"
        app:layout_constraintTop_toTopOf="@id/hgd20">

        <ImageView
            android:id="@+id/imgExpandView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:onClick="advancedStateChange"
            android:src="@drawable/expand_view_button" />

        <GridLayout
            android:id="@+id/advanced_pad"
            style="@style/AdvancedPadLayout.AdvancedTab"
            android:background="@color/AdvancedPadColor"
            android:columnCount="4"
            android:rowCount="3">

            <!-->First row<-->

            <ImageButton
                android:id="@+id/toggle_degree_deg"
                style="@style/ActionButtonsStyle.Advanced.Text"
                android:layout_row="0"
                android:layout_column="0"
                android:autoSizeMaxTextSize="20dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:onClick="changeDegree"
                android:scaleType="centerInside"
                android:src="@drawable/ic_deg" />

            <ImageButton
                android:id="@+id/toggle_degree_rad"
                style="@style/ActionButtonsStyle.Advanced.Text"
                android:layout_row="0"
                android:layout_column="0"
                android:autoSizeMaxTextSize="20dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:onClick="changeDegree"
                android:scaleType="centerInside"
                android:src="@drawable/ic_rad"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/toggle_inv"
                style="@style/ActionButtonsStyle.Advanced.Text"
                android:layout_row="0"
                android:layout_column="1"
                android:autoSizeMaxTextSize="20dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:onClick="changeInversion"
                android:scaleType="centerInside"
                android:src="@drawable/ic_inv" />

            <ImageButton
                android:id="@+id/btn_pi"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="0"
                android:layout_column="2"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_pi" />


            <ImageButton
                android:id="@+id/btn_e"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="0"
                android:layout_column="3"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_e" />

            <!-->Second row<-->

            <ImageButton
                android:id="@+id/btn_fun_sin"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="1"
                android:layout_column="0"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_sin" />

            <ImageButton
                android:id="@+id/btn_fun_arcsin"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="1"
                android:layout_column="0"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arcsin"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_fun_cos"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="1"
                android:layout_column="1"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_cos" />

            <ImageButton
                android:id="@+id/btn_fun_arccos"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="1"
                android:layout_column="1"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arccos"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_fun_tan"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="1"
                android:layout_column="2"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tan" />

            <ImageButton
                android:id="@+id/btn_fun_arctan"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="1"
                android:layout_column="2"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arctan"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_factorial"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="1"
                android:layout_column="3"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_factorial" />

            <!-->Third row<-->
            <ImageButton
                android:id="@+id/btn_log"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="2"
                android:layout_column="0"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_log" />

            <ImageButton
                android:id="@+id/btn_10pow"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="2"
                android:layout_column="0"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_10_pow"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_ln"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="2"
                android:layout_column="1"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_ln" />

            <ImageButton
                android:id="@+id/btn_exp"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="2"
                android:layout_column="1"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_exp"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_pow"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="2"
                android:layout_column="2"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_pow" />

            <ImageButton
                android:id="@+id/btn_sqrt"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="2"
                android:layout_column="3"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_sqrt" />

            <ImageButton
                android:id="@+id/btn_sqr"
                style="@style/ActionButtonsStyle.Advanced"
                android:layout_row="2"
                android:layout_column="3"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_sqr"
                android:visibility="gone" />


        </GridLayout>
    </com.example.calculator.utils.AdvancedDrawer>

    <LinearLayout
        android:id="@+id/numberPadLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/shadowColor"
        android:layoutDirection="ltr"
        android:minHeight="300dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expandableAdvancedDrawer">

        <GridLayout
            android:id="@+id/numberPad"
            style="@style/AdvancedPadLayout.Numbers"
            android:background="@color/DarkGray"
            android:columnCount="4"
            android:rowCount="5">

            <ImageButton
                android:id="@+id/btn_clr"
                style="@style/ActionButtonsStyle.Operator.Text"
                android:layout_row="0"
                android:layout_column="0"
                android:scaleType="centerInside"
                android:src="@drawable/ic_ac"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/btn_del"
                style="@style/ActionButtonsStyle.Operator.Text"
                android:layout_row="0"
                android:layout_column="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_del"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/btn_op_percent"
                style="@style/ActionButtonsStyle.Operator.Text"
                android:layout_row="0"
                android:layout_column="2"
                android:scaleType="centerInside"
                android:src="@drawable/ic_percent"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/btn_div"
                style="@style/ActionButtonsStyle.Operator"
                android:layout_row="0"
                android:layout_column="3"
                android:scaleType="centerInside"
                android:src="@drawable/ic_div"
                android:visibility="visible" />

            <Button
                android:id="@+id/digit_7"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="addNumber"
                android:text="@string/_7" />

            <Button
                android:id="@+id/digit_8"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="addNumber"
                android:text="@string/_8" />

            <Button
                android:id="@+id/digit_9"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="addNumber"
                android:text="@string/_9" />

            <ImageButton
                android:id="@+id/btn_mul"
                style="@style/ActionButtonsStyle.Operator"
                android:layout_row="1"
                android:layout_column="3"
                android:scaleType="centerInside"
                android:src="@drawable/ic_mul"
                android:visibility="visible" />

            <Button
                android:id="@+id/digit_4"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="2"
                android:layout_column="0"
                android:onClick="addNumber"
                android:text="@string/_4" />

            <Button
                android:id="@+id/digit_5"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="2"
                android:layout_column="1"
                android:onClick="addNumber"
                android:text="@string/_5" />

            <Button
                android:id="@+id/digit_6"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="2"
                android:layout_column="2"
                android:onClick="addNumber"
                android:text="@string/_6" />

            <ImageButton
                android:id="@+id/btn_sub"
                style="@style/ActionButtonsStyle.Operator"
                android:layout_row="2"
                android:layout_column="3"
                android:scaleType="centerInside"
                android:src="@drawable/ic_sub"
                android:visibility="visible" />

            <Button
                android:id="@+id/digit_1"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="3"
                android:layout_column="0"
                android:onClick="addNumber"
                android:text="@string/_1" />

            <Button
                android:id="@+id/digit_2"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="3"
                android:layout_column="1"
                android:onClick="addNumber"
                android:text="@string/_2" />

            <Button
                android:id="@+id/digit_3"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="3"
                android:layout_column="2"
                android:onClick="addNumber"
                android:text="@string/_3" />

            <ImageButton
                android:id="@+id/btn_add"
                style="@style/ActionButtonsStyle.Operator"
                android:layout_row="3"
                android:layout_column="3"
                android:scaleType="centerInside"
                android:src="@drawable/ic_add"
                android:visibility="visible" />

            <Button
                android:id="@+id/dec_point"
                style="@style/ActionButtonsStyle.Special"
                android:layout_row="4"
                android:layout_column="0"
                android:text="@string/decimal_point" />

            <Button
                android:id="@+id/digit_0"
                style="@style/ActionButtonsStyle.Numbers"
                android:layout_row="4"
                android:layout_column="1"
                android:onClick="addNumber"
                android:text="@string/_0" />

            <ImageButton
                android:id="@+id/btn_paren"
                style="@style/ActionButtonsStyle.Operator.Text"
                android:layout_row="4"
                android:layout_column="2"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_parentheses"
                android:visibility="visible" />

            <LinearLayout
                style="@style/ActionButtonsStyle.Operator"
                android:layout_row="4"
                android:layout_column="3"
                android:background="@color/AccentBackground">

                <ImageButton
                    android:id="@+id/equal"
                    style="@style/ActionButtonsStyle.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_equal" />

            </LinearLayout>


        </GridLayout>

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgd20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />
</androidx.constraintlayout.widget.ConstraintLayout>